Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
+<html>
+<body background="shadowbrainboxBG.png">
 <h1>Awesomeness - When I get sad, I stop being sad and be awesome again. True story.</h1>
+</body>
+</html>
