--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <body background="shadowbrainboxBG.png">
-<h1>Awesomeness - When I get sad, I stop being sad and be awesome again. True story.</h1>
+<h1 style="background-color:white;" align="center">Awesomeness - When I get sad, I stop being sad and be awesome again. True story.</h1>
 </body>
 </html>
