--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-<body background="shadowbrainboxBG.png">
+<body>
+<img src="shadowbrainboxBG.png" alt="ShadowBrain" />
 <h1 style="background-color:white;" align="center">Awesomeness - When I get sad, I stop being sad and be awesome again. True story.</h1>
+<img src="shadowbrain.png" alt="ShadowBrain" />
 </body>
 </html>
