--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
-<img src="shadowbrainboxBG.png" alt="ShadowBrain" />
+<img src="shadowbrainboxBG.png" alt="ShadowBrain" width="50" height="50" />
 <h1 style="background-color:white;" align="center">Awesomeness - When I get sad, I stop being sad and be awesome again. True story.</h1>
-<img src="shadowbrain.png" alt="ShadowBrain" />
+<img src="shadowbrain.png" alt="ShadowBrain" width="100" height="50" />
 </body>
 </html>
