minor dumb little tweeks to the page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
 <body>
+  <iframe class="btn" frameborder="0" border="0" scrolling="no" allowtransparency="true" height="25" width="115" src="http://platform.tumblr.com/v1/follow_button.html?button_type=2&tumblelog=brainshadow&color_scheme=dark"></iframe>
+<p align="center">
+<a href="http://shadowbrain.com"><img src="shadowbrainboxBG.png" alt="ShadowBrain" /></a>
+</p>
 <h1 style="background-color:white;" align="center">Awesomeness - When I get sad, I stop being sad and be awesome again. True story.</h1>
-<img src="shadowbrain.png" alt="ShadowBrain" width="1280" height="675" />
+<p align="center">
+<img src="shadowbrain.png" alt="ShadowBrain" />
+</p>
 </body>
 </html>
