--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <a href="http://shadowbrain.com"><img src="shadowbrainboxBG.png" alt="ShadowBrain" /></a>
 </p>
 <h1 style="background-color:white;" align="center">Awesomeness - When I get sad, I stop being sad and be awesome again. True story.</h1>
-<img src="shadowbrain.png" alt="ShadowBrain" />
+<iframe class="btn" frameborder="0" border="0" scrolling="no" allowtransparency="true" height="200" width="600" src="http://static.tumblr.com/3gsm5ck/6m4lwzlek/brain-logo.jpg"></iframe>
 </body>
 </html>
