--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <body>
   <iframe class="btn" frameborder="0" border="0" scrolling="no" allowtransparency="true" height="25" width="115" src="http://platform.tumblr.com/v1/follow_button.html?button_type=2&tumblelog=brainshadow&color_scheme=dark"></iframe>
+  <iframe class="btn" align="right" frameborder="0" border="0" scrolling="no" allowtransparency="true" src="http://static.tumblr.com/3gsm5ck/6m4lwzlek/brain-logo.jpg"></iframe>
 <p align="center">
 <a href="http://shadowbrain.com"><img src="shadowbrainboxBG.png" alt="ShadowBrain" /></a>
 </p>
 <h1 style="background-color:white;" align="center">Awesomeness - When I get sad, I stop being sad and be awesome again. True story.</h1>
-<iframe class="btn" frameborder="0" border="0" scrolling="no" allowtransparency="true" height="600" width="200" src="http://static.tumblr.com/3gsm5ck/6m4lwzlek/brain-logo.jpg"></iframe>
 </body>
 </html>
