--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 <body>
   <iframe class="btn" frameborder="0" border="0" scrolling="no" allowtransparency="true" height="25" width="115" src="http://platform.tumblr.com/v1/follow_button.html?button_type=2&tumblelog=brainshadow&color_scheme=dark"></iframe>
-  <iframe class="btn" align="right" frameborder="0" border="0" scrolling="no" allowtransparency="true" src="http://static.tumblr.com/3gsm5ck/6m4lwzlek/brain-logo.jpg"></iframe>
+  <a align="right" href="http://shadowbrain.com">
+    <img src="http://static.tumblr.com/3gsm5ck/6m4lwzlek/brain-logo.jpg"/>
+  </a>
 <p align="center">
 <a href="http://shadowbrain.com"><img src="shadowbrainboxBG.png" alt="ShadowBrain" /></a>
 </p>
